--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   permission_handler: ^12.0.1
   vibration: ^3.1.5
   simple_barcode_scanner: ^0.4.0
+  google_mlkit_text_recognition: ^0.15.1
 
 
 
